Fix results spacing

--- a/client/src/pages/css/Result.css
+++ b/client/src/pages/css/Result.css
@@ -6,7 +6,7 @@
   margin: 0 auto;
   width: 100%;
   height: 100%;
-  padding-top: 164px;
+  padding-top: 32px;
 }
 
 .share-container {
